# header-only-library-template

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/in/: myprojConfig.cmake.in
cmake/modules/: CompilerWarnings.cmake  StaticAnalyzers.cmake
test/: CMakeLists.txt
